public/stylesheets/style.css
/* Master css stylesheet */

:root {
  --focusgrey: #e5eef5;
  --white: #ffffff;
  --black: #000000;
  --darkestgrey: #1b2631;
  --darkgrey: #4d5656;
  --grey: #717d7e;
  --lightgrey: #aab7b8;
  --lightestgrey: #eaeded;
  --lightestpink: #f9ebea;
  --lightpink: #f2d7d5;
  --softpink: #e6b0aa;
  --pink: #e6b0aa;
  --darkpink: #d98880;
  --darkestpink: #cd6155;
  --pinkred: #c0392b;
  --reddish: #a93226;
  --deepred: #922b21;
  --darkestred: #641e16;
  --primaryred: #7b241c;

  /* Blues */
  --paleblue: #caddea;
  --lightblue: #b0cce0;
  --blue: #629ac2;
  --primaryblue: #2d78ad;
  --deepblue: #1c4b6c;
  --darkblue: #112d41;
}

/* ---------------- */
/* Site wide styles */
/* ---------------- */
/* body {
  margin: 0;
  padding: 0px;
  height: 100%;
} */

.titleheader {
  height: 40px;
}

.link {
  color: var(--primaryblue) !important;
}

.menuItem.link {
  color: var(--white) !important;
}

/* For accessibility */
.link:focus {
  outline: none;
  border: 1px dashed var(--focusgrey);
}

.horizontal-line {
  border-color: var(--darkgrey);
  border-top-style: solid;
  border-width: 1px;
  margin-bottom: 20px;
  margin-top: 10px;
}

.icon-next {
  display: inline;
}

.leftrightfloatblock {
  display: flex;
  justify-content: space-between;
  margin: 5px 0;
}

.leftfloat {
  display: flex;
  justify-content: flex-start;
}

.rightfloat {
  display: inline;
  justify-content: flex-end;
}

.default-grey {
  color: var(--darkgrey);
}

.errormessagebox {
  display: flex;
  padding: 5px;
  background-color: var(--pinkred);
  color: var(--white);
  justify-content: center;
  vertical-align: middle;
}

.successmessagebox {
  display: flex;
  padding: 5px;
  background-color: var(--lightblue);
  color: var(--darkgrey);
  justify-content: center;
  vertical-align: bottom;
}

.messagebutton {
  margin: 0 20px;
}

.quizmessage {
  font: 1.2em "Open Sans", serif;
  color: var(--white);
  padding: 5px;
}

.hidemessage {
  display: none;
}

.statistics {
  text-align: center;
  padding: 15px 0;
  font-size: 40px;
  line-height: 20px;
  font-weight: 150;
  color: var(--primaryblue);
  margin-top: 20px;
}

.statsticssubheading {
  text-align: center;
  font-size: 17px;
  line-height: 18px;
  color: var(--lightgrey);
  margin-bottom: 50px;
  margin-top: 10px;
}

.blurbheader {
  font-size: 30px;
  line-height: 20px;
  font-weight: 150;
}

.blurb {
  font-size: 16px;
  line-height: 27px;
  font-weight: 70;
  padding: 15px 0;
  margin-bottom: 5px;
}

.landingicons {
  display: block;
  margin-top: 30px;
  margin-left: auto;
  margin-right: auto;
  text-align: center;
}

.movienameserif {
  font-size: 12pt;
}

.moviequotesmall {
  font: 1.8em "Habibi", serif;
  line-height: 1.2em;
  padding: 5px;
}

.moviequotemedium {
  font: 3em "Habibi", serif;
  line-height: 1.2em;
}

.moviequotelarge {
  font: 5em "Habibi", serif;
  line-height: 1.2em;
}

.spacer {
  margin: 5px 0;
}

.spacetop {
  margin-top: 10px;
}

.headerlarge {
  font-size: 1.71428571em;
  padding: 0 0;
  font-family: "Open Sans", "Helvetica Neue", Arial, Helvetica, sans-serif;
  font-weight: 700;
  line-height: 1.28571429em;
  text-transform: none;
  color: var(--primaryblue);
}

/* -------------- */
/* Form controls  */
/* -------------- */

.formcontainer {
  display: relative;
  margin-left: auto;
  margin-right: auto;
  padding-top: 3vh;
  justify-content: center;
}

.authenticatecontainer {
  display: relative;
  margin: 0 250px;
  padding-top: 3vh;
  justify-content: center;
}

.formfield {
  padding: 5px;
}

/* -------------------------------------------------------- */
/* Landing / login / register / forgot password page styles */
/* -------------------------------------------------------- */

#bg {
  /* height: 100%;
  width: 100%;
  background-size: cover;
  background-position: center;
  background-color: var(--pinkred); */
  display: block;
  width: 100%;
  background-color: var(--lightblue);
  /*background-image: url("https://images.unsplash.com/photo-1507990178188-0118b242deda?ixlib=rb-1.2.1&auto=format&fit=crop&w=1391&q=80");
  transition: all 0.3s ease;
  -webkit-transform: translate3d(0, 0, 0);*/
}

.logo {
  color: var(--white);
  font-size: 1.1rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
}

.logo a:hover {
  color: var(--white) !important;
}

.block {
  display: block;
  margin-top: 15vh;
  width: 100%;
  background-color: var(--white);
  overflow: hidden;
}

.flexcontainer {
  display: flex;
  margin-left: 2em;
  margin-right: 2em;
  text-align: center;
}

.flexstretch {
  display: flex;
  margin-left: 2em;
  margin-right: 2em;
  text-align: center;
  align-items: stretch;
}

.flexitem {
  flex: 1;
  text-align: center;
  margin: 1px 4px;
}

.quizbutton {
  border: 2px solid var(--white);
  background-color: var(--lightblue);
  color: var(--white);
  border-radius: 5px;
  height: 37px;
  font-family: "Open Sans";
  font-weight: bold;
  padding: 0 20px;
}

/* For accessibility */
.quizbutton:focus {
  outline: none;
  border: 1px dashed var(--focusgrey);
}

.quizbutton:hover {
  background-color: var(--white);
  color: var(--deepblue);
}

.bluebutton {
  background-color: var(--primaryblue);
  color: var(--white);
  border: 0;
  border-radius: 5px;
  height: 37px;
  font-family: "Open Sans";
  font-weight: bold;
  padding: 8px 15px;
}

/* For accessibility */
.bluebutton:focus {
  outline: none;
  border: 1px dashed var(--focusgrey);
}

.bluebuttonsmall {
  background-color: var(--primaryblue);
  color: var(--white);
  border: 0;
  border-radius: 5px;
  height: 30px;
  font-family: "Open Sans";
  font-weight: bold;
  font-size: 8pt;
  padding: 10px 15px;
}

.bluebutton:hover {
  background-color: var(--deepblue);
  color: var(--white);
}

/* For accessibility */
.bluebuttonsmall:focus {
  outline: none;
  border: 1px dashed var(--focusgrey);
}

.skipquiz {
  display: block;
  margin: 40px 0;
  color: var(--darkgrey);
  font-size: 0.7rem;
  letter-spacing: 0.2em;
  text-transform: uppercase;
  text-align: center;
}

.skipquiz:focus {
  outline: none;
  border: 1px dashed var(--focusgrey);
}

#moviequote {
  margin-top: 50px;
  color: var(--white);
  display: inline-block;
  vertical-align: middle;
  height: 175px;
  -webkit-backface-visibility: hidden;
}

#usermessage {
  height: 50px;
}

.movie-name-year {
  font-size: 1.5em;
  line-height: 1.2em;
}

/* ----------------------------------------------------- */
/* Movie quotes - new/show/search page styles */
/* ----------------------------------------------------- */
.movie-container {
  z-index: 1;
  position: relative;
  text-align: left;
  margin-left: 15em;
  margin-right: 15em;
  padding-top: 3vh;
  text-align: left;
}

/* ----------------- */
/* index page styles */
/* ----------------- */
.gridcontainer {
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
  grid-template-rows: auto;
  grid-gap: 30px;
  grid-auto-flow: dense;
  place-items: stretch stretch;
  justify-content: space-between;
  margin-top: 10px;
}

.griditem {
  margin-bottom: 10px;
}

.quoteitem {
  border-color: var(--darkgrey);
  border-top-style: solid;
  border-width: 1px;
  position: relative;
  padding-bottom: 50px;
}

.movie-year {
  font-weight: bold;
}

.moreinfo {
  float: right;
  color: var(--primaryblue);
}

.commentblock {
  display: flex;
  padding: 5px;
  position: absolute;
  bottom: 0;
  width: 100%;
}

.floatcomment{
  position: absolute;
  right: 0; 
}

.floatright {
  /* position: absolute;
  right: 0; */
  float: right;
}

/* ---------------- */
/* show page styles */
/* ---------------- */
.itemMovieQuote {
  align-items: center;
  justify-content: space-evenly;
  text-align: center;
  margin-top: 20px;
  margin-left: 5px;
  margin-right: 5px;
}

.movie-screenwriter {
  margin-top: 10px;
  font-size: 1em;
  line-height: 1.2em;
}

.showfield {
  display: flex;
  height: 100%;
  width: 100%;
  align-items: center;
  justify-content: center;
  text-align: center;
  margin: 15px 0;
}

#buttonhidden {
  border: 0;
  background: none;
  margin: 0;
  left: 0;
  padding: 0;
}

.submitblock {
  padding-bottom: 10px;
}

/* .flexcomments>* {
  flex: 1;
  margin-bottom: 20px;
  border: 1px solid red;
} */

.flexcomments {
  display: grid;
  grid-template-columns: 50px 60px auto;
  grid-gap: 10px;
  margin-top: 15px;
  justify-content: left;
  align-items: end;
}

.commentfield {
  margin: 15px 0;
  color: var(--darkgrey);
}

.text {
  margin-bottom: 15px;
}

/* ------------------ */
/* Search page styles */
/* ------------------ */
.resultfield {
  display: flex;
  height: 100%;
  width: 100%;
  margin: 5px 0;
  align-items: left;
}

/* -------------------------- */
/* footer partial page styles */
/* -------------------------- */

.footerui {
  background-color: var(--lightblue);
  position: relative;
  bottom: 0;
  width: 100%;
}

.footerui a {
  float: left;
  display: block;
  color: var(--darkgrey);
  text-align: center;
  padding: 14px 16px;
}

/* -----------------
/* menu
/* -----------------

/* Add a background color to the top navigation */
.topMenu {
  background-color: var(--blue);
  overflow: hidden;
}

/* Style the links inside the navigation bar */
.topMenu a {
  float: left;
  display: block;
  color: var(--white);
  text-align: center;
  padding: 8px 16px;
}

.topMenu .menuItem {
  float: right;
}

/* Change the color of links on hover */
.topMenu a:hover {
  color: var(--primaryblue);
}

.topMenu a:focus {
  outline: none;
  border: 1px dashed var(--focusgrey);
}

/* Hide the link that should open and close the topnav on small screens */
.topMenu .menuIcon {
  display: none;
}

